fix: Fix the issues of check-and-test workflows
- The python 3.14 is not supported by setup-python yet.
- The pyright action needs to setup python enviroments first.

--- a/project/pyproject.toml.jinja
+++ b/project/pyproject.toml.jinja
@@ -79,6 +79,10 @@ default-groups = ["dev", "test", "check"]
 requires = ["wheel", "setuptools"]
 build-backend = "setuptools.build_meta"
 
+[tool.pyright]
+include = ["src"]
+pythonVersion = {{min_python_version}}
+
 [tool.mypy]
 files = ["src"]
 disallow_untyped_defs = true
