--- a/project/pyproject.toml.jinja
+++ b/project/pyproject.toml.jinja
@@ -144,7 +144,6 @@ select = [
     "PD",
     "E",
     "W",
-    "DOC102",
     "DOC202",
     "DOC403",
     "D",
@@ -163,7 +162,7 @@ ignore = [
     "SIM102",
     "SIM105",
     "SIM108",
-    "SIM114"
+    "SIM114",
     "SIM117",
     "D100",
     "D101",
